--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,20 @@
         margin-bottom: 1rem;
       }
 
+      .controls {
+        display: flex;
+        gap: 1rem;
+        align-items: center;
+      }
+
+      input[type="number"] {
+        padding: 0.4rem;
+        width: 60px;
+        font-size: 1rem;
+        border: 1px solid #d1d5db;
+        border-radius: 4px;
+      }
+
       button {
         padding: 0.6rem 1.2rem;
         font-size: 1rem;
@@ -64,7 +78,13 @@
   </head>
   <body>
     <h1>📚 Book Scraper</h1>
-    <button onclick="runScraper()">Run Scraper</button>
+
+    <div class="controls">
+      <label for="pages">Pages:</label>
+      <input type="number" id="pages" min="1" max="50" value="3" />
+      <button onclick="runScraper()">Run Scraper</button>
+    </div>
+
     <p id="status"></p>
     <pre id="output">Click "Run Scraper" to fetch data...</pre>
 
@@ -72,16 +92,20 @@
       async function runScraper() {
         const status = document.getElementById("status");
         const output = document.getElementById("output");
+        const pages = document.getElementById("pages").value;
+
         status.textContent = "Fetching book data...";
         output.textContent = "";
 
         try {
-          const res = await fetch("/scrape");
+          const res = await fetch(`/scrape?pages=${pages}`);
           const text = await res.text();
 
           try {
             const data = JSON.parse(text);
-            status.textContent = "Scrape complete!";
+            status.textContent = `Scraped ${
+              data.length
+            } books from ${pages} page${pages > 1 ? "s" : ""}.`;
             output.textContent = JSON.stringify(data, null, 2);
           } catch (jsonErr) {
             status.textContent = "Response is not valid JSON.";
