--- a/public/index.html
+++ b/public/index.html
@@ -8,73 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: "Inter", sans-serif;
-        background-color: #f9fafb;
-        margin: 0;
-        padding: 2rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: #111827;
-      }
-
-      h1 {
-        font-size: 2rem;
-        font-weight: 600;
-        margin-bottom: 1rem;
-      }
-
-      .controls {
-        display: flex;
-        gap: 1rem;
-        align-items: center;
-      }
-
-      input[type="number"] {
-        padding: 0.4rem;
-        width: 60px;
-        font-size: 1rem;
-        border: 1px solid #d1d5db;
-        border-radius: 4px;
-      }
-
-      button {
-        padding: 0.6rem 1.2rem;
-        font-size: 1rem;
-        background-color: #2563eb;
-        color: white;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-        transition: background-color 0.2s;
-      }
-
-      button:hover {
-        background-color: #1e40af;
-      }
-
-      #status {
-        margin-top: 1rem;
-        font-weight: 500;
-      }
-
-      pre {
-        margin-top: 1rem;
-        width: 100%;
-        max-width: 800px;
-        background-color: #f3f4f6;
-        border: 1px solid #d1d5db;
-        border-radius: 8px;
-        padding: 1rem;
-        overflow-x: auto;
-        font-size: 0.9rem;
-        line-height: 1.4;
-        white-space: pre-wrap;
-        word-wrap: break-word;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>📚 Book Scraper</h1>
@@ -83,39 +17,17 @@
       <label for="pages">Pages:</label>
       <input type="number" id="pages" min="1" max="50" value="3" />
       <button onclick="runScraper()">Run Scraper</button>
+      <button id="downloadBtn" class="hidden" onclick="downloadJSON()">
+        Download JSON
+      </button>
     </div>
 
     <p id="status"></p>
+    <div id="spinner" class="spinner hidden"></div>
     <pre id="output">Click "Run Scraper" to fetch data...</pre>
 
-    <script>
-      async function runScraper() {
-        const status = document.getElementById("status");
-        const output = document.getElementById("output");
-        const pages = document.getElementById("pages").value;
+    <footer class="signature">Built by Lucas</footer>
 
-        status.textContent = "Fetching book data...";
-        output.textContent = "";
-
-        try {
-          const res = await fetch(`/scrape?pages=${pages}`);
-          const text = await res.text();
-
-          try {
-            const data = JSON.parse(text);
-            status.textContent = `Scraped ${
-              data.length
-            } books from ${pages} page${pages > 1 ? "s" : ""}.`;
-            output.textContent = JSON.stringify(data, null, 2);
-          } catch (jsonErr) {
-            status.textContent = "Response is not valid JSON.";
-            output.textContent = text;
-          }
-        } catch (err) {
-          status.textContent = "Failed to fetch data.";
-          output.textContent = err.toString();
-        }
-      }
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
