--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,17 @@
     <h1>📚 Book Scraper</h1>
 
     <div class="controls">
-      <label for="pages">Pages:</label>
-      <input type="number" id="pages" min="1" max="50" value="3" />
-      <button onclick="runScraper()">Run Scraper</button>
-      <button id="downloadBtn" class="hidden" onclick="downloadJSON()">
-        Download JSON
-      </button>
+      <div class="input-group">
+        <label for="pages">Pages:</label>
+        <input type="number" id="pages" min="1" max="50" value="3" />
+      </div>
+
+      <div class="button-group">
+        <button onclick="runScraper()">Run Scraper</button>
+        <button id="downloadBtn" class="hidden" onclick="downloadJSON()">
+          Download JSON
+        </button>
+      </div>
     </div>
 
     <p id="status"></p>
